feat: add restaurantEndpoint find byEmail
